--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,13 +20,8 @@ jobs:
             TOKEN="${{ secrets.BOT_DISCORD_TOKEN }}"
             GITHUB_TOKEN="${{ secrets.BOT_GITHUB_TOKEN }}"
             EOF
-    
-      - name: Deploy files
-        uses: burnett01/rsync-deployments@6.0.0
-        with:
-          switches: -avz
-          path: ./
-          remote_path: ${{ secrets.DEPLOY_PATH }}
-          remote_host: ${{ secrets.DEPLOY_HOST }}
-          remote_user: ${{ secrets.DEPLOY_USER }}
-          remote_key: ${{ secrets.DEPLOY_KEY }}
+
+      - name: Deploy to VPS
+        run: |
+          ssh-keyscan -H ${ secrets.DEPLOY_HOST } >> ~/.ssh/known_hosts
+          ssh -o "StrictHostKeyChecking=no" -i ${ secrets.DEPLOY_KEY } ${ secrets.DEPLOY_USER }@${ secrets.DEPLOY_HOST } "mkdir -p ${ secrets.DEPLOY_PATH } && cd ${ secrets.DEPLOY_PATH } && rm -rf * && git clone https://github.com/${ github.repository } .git && cd ${ github.repository } && git checkout ${ github.event_name } && git pull && git reset --hard origin/${ github.event_name } && cp -r ./* ${ secrets.DEPLOY_PATH }"
